# edge-frame

./: .gitignore  Cargo.toml  README.md  index.html  index.scss  package.json  webpack.config.js
.github/workflows/: ci.yml  publish-dry-run.yml  publish.yml
edge-frame/: CHANGELOG.md  Cargo.toml
edge-frame/src/: assets.rs  auth.rs  dto.rs  field.rs  frame.rs  ipv4.rs  lib.rs  loading.rs  middleware.rs  navbar.rs  redust.rs  role.rs  util.rs  wifi.rs  wifi_setup.rs
edge-frame/src/ipv4/: client.rs  router.rs
edge-frame/src/wifi/: ap.rs  sta.rs
js/: app.scss
kitchen-sink/: Cargo.toml  index.html
kitchen-sink/src/: main.rs
src/: api.rs  components.rs  exit.rs  field.rs  frame.rs  lambda.rs  lib.rs  main.rs  plugin.rs  plugins.rs  redust.rs  role.rs  simple_plugins.rs  util.rs  utils.rs  wasm_future.rs  wifi.rs
src/api/: uri_utils.rs  wifi.rs
src/components/: common.rs  field.rs  frame.rs  router_icon_button.rs  router_list_item.rs  util.rs  wifi.rs  wifi_ap.rs
src/utils/: callback2.rs  field.rs  navigation_item.rs  status_item.rs
static/: index.html
workflows/: ci.yml
