[package]
name = "edge-frame"
version = "0.3.1"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "ui"]
keywords = ["ui", "embedded", "frame", "yew", "wasm", "trunk", "svc", "hal"]
description = "Yew & Wasm-based user interface for microcontrollers."
repository = "https://github.com/ivmarkov/edge-frame"
license = "MIT OR Apache-2.0"

[lib]

[profile.release]
lto = true
opt-level = 'z'

[features]
default = ["wee_alloc", "demo"]
demo = []

[dependencies]
#anyhow = "1"
log = "0.4"
derive_more = "0.99"
wasm-logger = "0.2"
wee_alloc = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console"] }
yew = { version = "0.19", default-features = false }
yew-router = { version = "0.16" }
strum = { version = "0.23" }
embedded-svc = { version = "0.17.3", features = ["experimental"] }
derivative = "2.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"
