[workspace]
resolver = "2"

members = [
    "edge-frame",
    "kitchen-sink",
]

[patch.crates-io]
yewdux-middleware = {git = "https://github.com/ivmarkov/yewdux-middleware" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
