[package]
name = "edge-frame"
version = "0.3.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2018"
resolver = "2"
categories = ["embedded", "hardware-support", "ui"]
keywords = ["ui", "embedded", "frame", "yew", "svc"]
description = "Yew & Wasm-based user interface for microcontrollers."
repository = "https://github.com/ivmarkov/edge-frame"
license = "MIT OR Apache-2.0"

[features]
default = ["web", "wee_alloc"]
web = ["log", "derive_more", "wasm-logger", "web-sys", "yew", "yew-router", "dto", "embedded-svc/std"]
nightly = ["embedded-svc?/nightly"]
dto = ["serde", "enumset", "strum", "strum_macros", "num_enum"]
assets-serve = ["heapless", "log", "embedded-svc"]
assets-prepare = ["anyhow", "flate2"]

[dependencies]
anyhow = { version = "1", optional = true }
log = { version = "0.4", optional = true }
heapless = { version = "0.7", optional = true, default-features = false }
derive_more = { version = "0.99", optional = true }
wasm-logger = { version = "0.2", optional = true }
wee_alloc = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
yew = { version = "0.19", optional = true, default-features = false }
yew-router = { version = "0.16", optional = true }
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
enumset = { version = "1", default-features = false, optional = true, features = ["serde"] }
strum = { version = "0.23", default-features = false, optional = true, features = ["derive"] }
strum_macros = { version = "0.23", optional = true }
num_enum = { version = "0.5", default-features = false, optional = true }
#embedded-svc = { version = "0.23", optional = true, default-features = false, features = ["experimental", "use_serde", "use_strum", "use_numenum"] }
embedded-svc = { version = "0.23", git = "https://github.com/esp-rs/embedded-svc", optional = true, default-features = false, features = ["experimental", "use_serde", "use_strum", "use_numenum"] }
#embedded-svc = { version = "0.23", path = "../../embedded-svc", optional = true, default-features = false, features = ["experimental", "use_serde", "use_strum", "use_numenum"] }
flate2 = { version = "1", optional = true }
